@@ -37,6 +37,7 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-400 HCatalog build fails from git checkout due to missing lib directory (traviscrawford via gates)
 
 Release 0.4.0 - Unreleased
 
